# PurpleHLE

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  Starlet.sln  send.sh
Starlet/Core/: Program.cs  Settings.cs
Starlet/MachBox/: FileMagic.cs  iOS-Devices-Simplified  iOSDevices  readme
src/core/: Main.h  glWin.cpp  glWin.h  main.cpp  mainWx.cpp
src/core/Terrible Arm Disassembler/: dis.h  disArm.cpp  disThumb.cpp
src/core/gui/: DebugWin.cpp  DebugWin.h  resources.cpp  resources.h
src/starlet/: lol.cpp
src/starlet/armv6/Kernel/BsdKernel/: SysCtl.cpp
src/starlet/armv6/Kernel/FileSystem/: BsdFile.cpp  BsdRegFile.cpp
src/starlet/armv6/Kernel/HLE/: Bootstrap.cpp
src/starlet/armv6/Kernel/IOKit/: IoOpenPort.cpp  IoPortMap.cpp  Mbx2D.cpp  MbxPort.cpp
src/starlet/armv6/Kernel/IPC/: IpcRight.cpp  MsgRight.cpp
src/starlet/armv6/Kernel/Mach-O/: DebugSymbols.cpp
src/starlet/armv6/Kernel/MachKernel/: Thread.cpp
src/starlet/armv6/Kernel/Ports/: ClockPort.cpp  TaskPort.cpp
src/starlet/armv6/Kernel/SWI/: Swi.cpp
src/starlet/armv6/Kernel/Socket/: BsdSocket.cpp  DgramSocket.cpp
src/starlet/armv6/Misc/: Application.cpp  File.cpp  MemBlock.cpp  MiscFunc.cpp  NibReader.cpp  Object.cpp  Port.cpp
src/starlet/armv6/Terrible Arm Interpreter/: Inst_Data.inl  Inst_Flags.inl  Inst_Misc.inl  Inst_Multiple.inl  Inst_Vfp.inl
src/starlet/armv6/core/: BsdSeekable.cpp  Class.cpp  Devices.cpp  FrameBufferPort.cpp  FuncExec.cpp  IoServicePort.cpp  IpcMessage.cpp  IpcName.cpp  IpcPort.cpp  MachOHLE.cpp  MachoReader.cpp  MemMap.cpp  Objc.cpp  Plist.cpp  PlistBReader.cpp  Pthread.cpp  StreamSocket.cpp  Surface.cpp  SwiResume.cpp  Task.cpp  ThreadPort.cpp  Timer.cpp  VirtualMem.cpp  Waitable.cpp
src/starlet/armv6/headers/: Application.h  Bootstrap.h  BsdBasics.h  BsdFile.h  BsdKqueue.h  BsdRegFile.h  BsdSeekable.h  BsdShm.h  BsdSocket.h  Class.h  ClockPort.h  CpuState.h  DebugSymbols.h  Devices.h  DgramSocket.h  DistNotifyPort.h  ErrNo.h  FSMode.h  FSOflag.h  FdSpace.h  File.h  FrameBufferPort.h  FuncExec.h  HostPort.h  Instruction.h  IoOpenPort.h  IoServicePort.h  IpcMessage.h  IpcName.h  IpcNameSpace.h  IpcPort.h  IpcRight.h  List.h  MMFlag.h  MachErr.h  MachOHLE.h  MachoReader.h  Map.h  Mbx2D.h  MbxPort.h  (+44 more)
src/starlet/armv6/inline/: Decode.inl  Inst_Bits.inl  Inst_Branch.inl  Inst_Mem.inl  Inst_Multiply.inl  Inst_Packed.inl  Inst_Shift.inl  Inst_Vfp.inl  Inst_VfpMem.inl  PlistNode.inl
